Prevent auto dark mode tools from breaking the already supported dark mode

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,8 @@
 @import 'helper/fancyAnchor.css';
 
 :root {
+  color-scheme: light dark;
+
   --white: #fff;
   --black: #111;
 
